@@ -36,5 +36,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
   * In rules, only installing selected directories. Skipping .o files.
   * In rules, enabled parallel build.
   * In rules, added VISTA_FOIA_VERSION to installation directory path.
+  * In rules, now gets source from Alioth git, then composes with VistA-M.
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
